--- a/Assignments/Arun Kumar K (member 3)/assignment/assignment 1/Assignment.html
+++ b/Assignments/Arun Kumar K (member 3)/assignment/assignment 1/Assignment.html
@@ -20,13 +20,13 @@
             <div class="about-container">
               <div class="col-sm-5">
               </br>
-              <img class="img-responsive img-circle" id="left-img" src="https://www.google.com/search?q=prajith+kichu&client=ms-android-xiaomi-rvo2&prmd=vni&sxsrf=ALiCzsYGQBVy_KdQ0SgSksM-6iyKiwOGag:1663150891305&source=lnms&tbm=isch&sa=X&ved=2ahUKEwjN5NXwh5T6AhUMyHMBHYCDAHsQ_AUoA3oECAIQAw&biw=375&bih=682&dpr=2.88#imgrc=rkoSxZmmxxfjPM" width="250" height="405" alt="prajith">
+              <img class="img-responsive img-circle" id="left-img" src="https://www.google.com/url?sa=i&url=https%3A%2F%2Funsplash.com%2Fimages%2Fanimals%2Fcat&psig=AOvVaw1RcAR_xqurufGeTF63G44W&ust=1665653434044000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCPCC2Iex2voCFQAAAAAdAAAAABAE" width="250" height="405" alt="arun kumar k ">
               
             </div>
             <div class="col-sm-6">
               </br>
               </br>
-              <p class="about-paragraph">My name is prajith krishnan and I am study in BE from Anna university in computer science engineer.<br>I am Fresher software engineer with knowledge in HTML5, CSS3, JavaScript.
+              <p class="about-paragraph">My name is Arun kumar k and I am study in BE from Anna university in computer science engineer.<br>I am Fresher software engineer with knowledge in HTML5, CSS3, JavaScript.
      A strong aptitude for learning new technologies, and a proven track record of meeting aggressive goals.</p>
             </div>
             </div>
